Add resetPassword API & modify swagger
